--- a/apps/my-api/project.json
+++ b/apps/my-api/project.json
@@ -7,7 +7,7 @@
   "targets": {
     "swagger": {
       "executor": "@nx-dotnet/core:update-swagger",
-      "outputs": ["{workspaceRoot}/libs/generated/api-swagger"],
+      "outputs": ["{workspaceRoot}/libs/generated/api-swagger.json"],
       "options": {
         "output": "libs/generated/api-swagger.json"
       },
