--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.12",
+    "@types/k6": "^0.54.1",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
